# hyper-reV

./: hyper-reV.sln  load-hyper-reV.bat
connectors/: README.md  example_memflow.sh
connectors/memflow/: Cargo.toml  README.md  build.rs
connectors/memflow/examples/: ps_win32.rs  read_phys.rs  scan_memory.rs  vmexit_perf.rs
connectors/memflow/src/: lib.rs
hyperv-attachment/: hyperv-attachment.vcxproj  hyperv-attachment.vcxproj.filters
hyperv-attachment/src/: main.cpp
hyperv-attachment/src/crt/: crt.cpp
hyperv-attachment/src/hypercall/: hypercall.cpp  hypercall.h
hyperv-attachment/src/memory_manager/: memory_manager.cpp  memory_manager.h
hyperv-attachment/src/slat/: slat.cpp  slat.h
hyperv-attachment/src/structures/: virtual_address.h
hyperv-core/: IMPLEMENTATION_SUMMARY.md  README.md  hyperv-core.vcxproj  hyperv-core.vcxproj.filters  pch.h
hyperv-core/examples/: example.cpp  usermode-example.cpp
hyperv-core/include/hyperv/: c_interface.h  core.h  error_code.h  hook.h  hypercall.h  logger.h  memory.h
hyperv-core/src/: c_interface.cpp  core.cpp  hook.cpp  hypercall.cpp  logger.cpp  memory.cpp  vmexit.asm
shared/hypercall/: hypercall_def.h
shared/structures/: memory_operation.h
tests/test_memread/: main.cpp  test_memread.vcxproj
uefi-boot/: uefi-boot.vcxproj
uefi-boot/src/: main.c
uefi-boot/src/bootmgfw/: bootmgfw.c
usermode/: usermode.vcxproj  usermode.vcxproj.filters  vcpkg.json
usermode/src/commands/: commands.cpp
usermode/src/system/: system.cpp  system.h
